--- a/index.html
+++ b/index.html
@@ -13,5 +13,12 @@
     <video autoplay muted loop>
       <source src="resources/videos/excursion.mp4" type="video/mp4" />
     </video>
+    <h2 class="subheading">Your personal travel guide</h2>
+    <p>
+      Excursion remembers places you like, and recommends new point of interest
+      around you.
+    </p>
+    <h2 class="subheading">Coming Soon for iPhone and Android</h2>
+    <p><a href="#">Download Excursion (Coming soon!)</a></p>
   </body>
 </html>
