Add images and copyright text with styling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
       Excursion remembers places you like, and recommends new point of interest
       around you.
     </p>
+    <p><img src="resources/images/camp.webp" /></p>
+    <p><img src="resources/images/phone.webp" /></p>
     <h2 class="subheading">Coming Soon for iPhone and Android</h2>
     <p><a href="#">Download Excursion (Coming soon!)</a></p>
+    <p class="copyright">© Excursion</p>
   </body>
 </html>
