--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </video>
     <h2 class="subheading">Your personal travel guide</h2>
     <p>
-      Excursion remembers places you like, and recommends new point of interest
+      Excursion remembers places you like, and recommends new points of interest
       around you.
     </p>
     <p><img src="resources/images/camp.webp" /></p>
